# adv-speedtest-cli

./: .gitignore  CONTRIBUTING.md  FEATURE_LIST.md  LICENSE  MANIFEST.in  PPA_DESCRIPTION.md  build_and_publish.bat  build_and_publish.sh  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  speedtest.py
.github/workflows/: build-deb.yml
advanced_speedtest_cli/: __init__.py  __main__.py  speedtest.py
debian/: changelog  control  copyright  install  postinst  postrm  rules
ppa/: README.md  build-deb.sh  diagnose-build.sh  ppa.conf  setup-ppa.sh  validate-build.sh
