[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adv-speedtest-cli"
version = "1.0.0"
description = "A sophisticated cross-platform command-line utility for measuring internet speed with precision"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Shakil Ahmed", email = "shakilofficial0@gmail.com"},
]
keywords = [
    "speedtest",
    "internet-speed",
    "bandwidth",
    "network",
    "cli",
    "speed-measurement",
    "download-upload-ping",
    "network-diagnostics",
    "cross-platform",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "tqdm>=4.62.0",
    "requests>=2.26.0",
    "click>=8.0.0",
    "colorama>=0.4.4",
    "validators>=0.18.0",
    "websockets>=10.0",
]

[project.urls]
Homepage = "https://github.com/shakilofficial0/adv-speedtest-cli"
Documentation = "https://github.com/shakilofficial0/adv-speedtest-cli#readme"
Repository = "https://github.com/shakilofficial0/adv-speedtest-cli.git"
"Bug Tracker" = "https://github.com/shakilofficial0/adv-speedtest-cli/issues"

[project.scripts]
adv-speedtest-cli = "advanced_speedtest_cli.__main__:main"
advanced-speedtest = "advanced_speedtest_cli.__main__:main"
speedtest-cli = "advanced_speedtest_cli.__main__:main"

[tool.setuptools]
packages = ["advanced_speedtest_cli"]

[tool.black]
line-length = 120
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.messages_control]
disable = ["too-many-locals", "too-many-branches", "too-many-arguments"]
