[metadata]
name = adv-speedtest-cli
version = 1.0.0
author = Shakil Ahmed
author_email = shakilofficial0@gmail.com
description = A sophisticated cross-platform command-line utility for measuring internet speed with precision
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shakilofficial0/adv-speedtest-cli
project_urls =
    Bug Tracker = https://github.com/shakilofficial0/adv-speedtest-cli/issues
    Documentation = https://github.com/shakilofficial0/adv-speedtest-cli#readme
    Source Code = https://github.com/shakilofficial0/adv-speedtest-cli
license = MIT
classifiers =
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Networking
    Topic :: Utilities
    Development Status :: 5 - Production/Stable

[options]
packages = find:
python_requires = >=3.7
install_requires =
    tqdm>=4.62.0
    requests>=2.26.0
    click>=8.0.0
    colorama>=0.4.4
    validators>=0.18.0
    websockets>=10.0

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    adv-speedtest-cli = advanced_speedtest_cli.__main__:main
    advanced-speedtest = advanced_speedtest_cli.__main__:main
    speedtest-cli = advanced_speedtest_cli.__main__:main
